tests/compile/shader_modules/task_payload.expected
#ifdef __clang__
In file included from task_payload.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:13:
In file included from function_construction.hpp:9:
inject_arguments.hpp:75:16: error: static assertion failed due to requirement '(rcgp::ShaderStage)1 == rcgp::ShaderStage::eMesh': TaskPayload is only valid for mesh shaders
   75 |         static_assert(S == ShaderStage::eMesh, "TaskPayload is only valid for mesh shaders");
      |                       ^~~~~~~~~~~~~~~~~~~~~~~
inject_arguments.hpp:179:4: note: in instantiation of function template specialization 'rcgp::inject_one_argument<rcgp::ShaderStage::eVertex, PayloadData>' requested here
  179 |                 (inject_one_argument <S> (std::get <Is> (args), counters), ...)
      |                  ^
cti.hpp:8:3: note: expanded from macro 'constexpr_for'
    8 |                 __VA_ARGS__;                                    \
      |                 ^
function_construction.hpp:53:3: note: in instantiation of function template specialization 'rcgp::inject_arguments<rcgp::ShaderStage::eVertex, rcgp::TaskPayload<PayloadData>, rcgp::write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, rcgp::vector<float, 4>>>' requested here
   53 |                 inject_arguments <S> (args);
      |                 ^
inject_arguments.hpp:75:18: note: expression evaluates to '1 == 5'
   75 |         static_assert(S == ShaderStage::eMesh, "TaskPayload is only valid for mesh shaders");
      |                       ~~^~~~~~~~~~~~~~~~~~~~~
inject_arguments.hpp:75:16: error: static assertion failed due to requirement '(rcgp::ShaderStage)3 == rcgp::ShaderStage::eMesh': TaskPayload is only valid for mesh shaders
   75 |         static_assert(S == ShaderStage::eMesh, "TaskPayload is only valid for mesh shaders");
      |                       ^~~~~~~~~~~~~~~~~~~~~~~
inject_arguments.hpp:179:4: note: in instantiation of function template specialization 'rcgp::inject_one_argument<rcgp::ShaderStage::eCompute, PayloadData>' requested here
  179 |                 (inject_one_argument <S> (std::get <Is> (args), counters), ...)
      |                  ^
cti.hpp:8:3: note: expanded from macro 'constexpr_for'
    8 |                 __VA_ARGS__;                                    \
      |                 ^
function_construction.hpp:53:3: note: in instantiation of function template specialization 'rcgp::inject_arguments<rcgp::ShaderStage::eCompute, rcgp::TaskPayload<PayloadData>, rcgp::WorkGroup<1>>' requested here
   53 |                 inject_arguments <S> (args);
      |                 ^
inject_arguments.hpp:75:18: note: expression evaluates to '3 == 5'
   75 |         static_assert(S == ShaderStage::eMesh, "TaskPayload is only valid for mesh shaders");
      |                       ~~^~~~~~~~~~~~~~~~~~~~~
In file included from task_payload.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:13:
In file included from function_construction.hpp:11:
return_handler.hpp:14:16: error: static assertion failed due to requirement '(rcgp::ShaderStage)1 == rcgp::ShaderStage::eTask'
   14 |         static_assert(S == ShaderStage::eTask);
      |                       ^~~~~~~~~~~~~~~~~~~~~~~
function_construction.hpp:62:4: note: in instantiation of function template specialization 'rcgp::return_handler<rcgp::ShaderStage::eVertex, PayloadData>' requested here
   62 |                         return_handler <S> (returns, argi);
      |                         ^
return_handler.hpp:14:18: note: expression evaluates to '1 == 4'
   14 |         static_assert(S == ShaderStage::eTask);
      |                       ~~^~~~~~~~~~~~~~~~~~~~~
return_handler.hpp:14:16: error: static assertion failed due to requirement '(rcgp::ShaderStage)3 == rcgp::ShaderStage::eTask'
   14 |         static_assert(S == ShaderStage::eTask);
      |                       ^~~~~~~~~~~~~~~~~~~~~~~
function_construction.hpp:62:4: note: in instantiation of function template specialization 'rcgp::return_handler<rcgp::ShaderStage::eCompute, PayloadData>' requested here
   62 |                         return_handler <S> (returns, argi);
      |                         ^
return_handler.hpp:14:18: note: expression evaluates to '3 == 4'
   14 |         static_assert(S == ShaderStage::eTask);
      |                       ~~^~~~~~~~~~~~~~~~~~~~~
4 errors generated.
#elif defined(__GNUC__)
#if __GNUC__ == 16
In file included from include/meta/function_construction.hpp:11,
                 from include/rcgp-meta.hpp:13,
                 from include/rcgp.hpp:4,
                 from tests/compile/shader_modules/task_payload.cpp:1:
include/meta/return_handler.hpp: In instantiation of 'void rcgp::return_handler(TaskPayload<T>&, size_t&) [with ShaderStage S = rcgp::ShaderStage::eVertex; T = PayloadData; size_t = long unsigned int]':
include/meta/function_construction.hpp:62:23:   required from 'auto rcgp::trace(auto:97) [with ShaderStage S = rcgp::ShaderStage::eVertex; auto:97 = taskpayload_return_in_vertex()::<lambda(ClipPosition)>]'
   62 |                         return_handler <S> (returns, argi);
      |                         ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:98) [with ShaderStage S = rcgp::ShaderStage::eVertex; auto:98 = taskpayload_return_in_vertex()::<lambda(ClipPosition)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/task_payload.cpp:52:2:   required from here
   52 |         };
      |         ^
include/meta/return_handler.hpp:14:25: error: static assertion failed
   14 |         static_assert(S == ShaderStage::eTask);
      |                       ~~^~~~~~~~~~~~~~~~~~~~~
  • '(rcgp::ShaderStage::eVertex == rcgp::ShaderStage::eTask)' evaluates to false
include/meta/return_handler.hpp: In instantiation of 'void rcgp::return_handler(TaskPayload<T>&, size_t&) [with ShaderStage S = rcgp::ShaderStage::eCompute; T = PayloadData; size_t = long unsigned int]':
include/meta/function_construction.hpp:62:23:   required from 'auto rcgp::trace(auto:97) [with ShaderStage S = rcgp::ShaderStage::eCompute; auto:97 = taskpayload_return_in_compute()::<lambda(WorkGroup<1>)>]'
   62 |                         return_handler <S> (returns, argi);
      |                         ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:98) [with ShaderStage S = rcgp::ShaderStage::eCompute; auto:98 = taskpayload_return_in_compute()::<lambda(WorkGroup<1>)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/task_payload.cpp:60:2:   required from here
   60 |         };
      |         ^
include/meta/return_handler.hpp:14:25: error: static assertion failed
   14 |         static_assert(S == ShaderStage::eTask);
      |                       ~~^~~~~~~~~~~~~~~~~~~~~
  • '(rcgp::ShaderStage::eCompute == rcgp::ShaderStage::eTask)' evaluates to false
In file included from include/meta/function_construction.hpp:9:
include/meta/inject_arguments.hpp: In instantiation of 'void rcgp::inject_one_argument(TaskPayload<T>&, InjectionCounters&) [with ShaderStage S = rcgp::ShaderStage::eVertex; T = PayloadData]':
include/meta/inject_arguments.hpp:178:2:   required from 'rcgp::inject_arguments<rcgp::ShaderStage::eVertex, TaskPayload<PayloadData>, write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, vector<float, 4> > >(std::tuple<TaskPayload<PayloadData>, write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, vector<float, 4> > >&)::<lambda(std::index_sequence<Is ...>)> [with long unsigned int ...Is = {0, 1}; std::index_sequence<Is ...> = std::integer_sequence<long unsigned int, 0, 1>]'
  179 |                 (inject_one_argument <S> (std::get <Is> (args), counters), ...)
      |                  ^~~~~~~~~~~~~~~~~~~~~~~
include/meta/inject_arguments.hpp:178:2:   required from 'void rcgp::inject_arguments(std::tuple<_Elements ...>&) [with ShaderStage S = rcgp::ShaderStage::eVertex; Args = {TaskPayload<PayloadData>, write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, vector<float, 4> >}]'
    7 |         [&] <size_t ... name> (std::index_sequence <name...>) { \
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    8 |                 __VA_ARGS__;                                    \
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    9 |         } (std::make_index_sequence <N> ())
      |         ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
include/meta/function_construction.hpp:53:24:   required from 'auto rcgp::trace(auto:97) [with ShaderStage S = rcgp::ShaderStage::eVertex; auto:97 = taskpayload_param_in_vertex()::<lambda(TaskPayload<PayloadData>, ClipPosition)>]'
   53 |                 inject_arguments <S> (args);
      |                 ~~~~~~~~~~~~~~~~~~~~~^~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:98) [with ShaderStage S = rcgp::ShaderStage::eVertex; auto:98 = taskpayload_param_in_vertex()::<lambda(TaskPayload<PayloadData>, ClipPosition)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/task_payload.cpp:38:2:   required from here
   38 |         };
      |         ^
include/meta/inject_arguments.hpp:75:25: error: static assertion failed: TaskPayload is only valid for mesh shaders
   75 |         static_assert(S == ShaderStage::eMesh, "TaskPayload is only valid for mesh shaders");
      |                       ~~^~~~~~~~~~~~~~~~~~~~~
  • '(rcgp::ShaderStage::eVertex == rcgp::ShaderStage::eMesh)' evaluates to false
include/meta/inject_arguments.hpp: In instantiation of 'void rcgp::inject_one_argument(TaskPayload<T>&, InjectionCounters&) [with ShaderStage S = rcgp::ShaderStage::eCompute; T = PayloadData]':
include/meta/inject_arguments.hpp:178:2:   required from 'rcgp::inject_arguments<rcgp::ShaderStage::eCompute, TaskPayload<PayloadData>, WorkGroup<1, 1, 1> >(std::tuple<TaskPayload<PayloadData>, WorkGroup<1, 1, 1> >&)::<lambda(std::index_sequence<Is ...>)> [with long unsigned int ...Is = {0, 1}; std::index_sequence<Is ...> = std::integer_sequence<long unsigned int, 0, 1>]'
  179 |                 (inject_one_argument <S> (std::get <Is> (args), counters), ...)
      |                  ^~~~~~~~~~~~~~~~~~~~~~~
include/meta/inject_arguments.hpp:178:2:   required from 'void rcgp::inject_arguments(std::tuple<_Elements ...>&) [with ShaderStage S = rcgp::ShaderStage::eCompute; Args = {TaskPayload<PayloadData>, WorkGroup<1, 1, 1>}]'
    7 |         [&] <size_t ... name> (std::index_sequence <name...>) { \
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    8 |                 __VA_ARGS__;                                    \
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    9 |         } (std::make_index_sequence <N> ())
      |         ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
include/meta/function_construction.hpp:53:24:   required from 'auto rcgp::trace(auto:97) [with ShaderStage S = rcgp::ShaderStage::eCompute; auto:97 = taskpayload_param_in_compute()::<lambda(TaskPayload<PayloadData>, WorkGroup<1>)>]'
   53 |                 inject_arguments <S> (args);
      |                 ~~~~~~~~~~~~~~~~~~~~~^~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:98) [with ShaderStage S = rcgp::ShaderStage::eCompute; auto:98 = taskpayload_param_in_compute()::<lambda(TaskPayload<PayloadData>, WorkGroup<1>)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/task_payload.cpp:43:87:   required from here
   43 |         auto bad = $shader(compute)(TaskPayload <PayloadData> payload, WorkGroup <1> group) {};
      |                                                                                              ^
include/meta/inject_arguments.hpp:75:25: error: static assertion failed: TaskPayload is only valid for mesh shaders
   75 |         static_assert(S == ShaderStage::eMesh, "TaskPayload is only valid for mesh shaders");
      |                       ~~^~~~~~~~~~~~~~~~~~~~~
  • '(rcgp::ShaderStage::eCompute == rcgp::ShaderStage::eMesh)' evaluates to false
#elif __GNUC__ == 15
In file included from include/meta/function_construction.hpp:11,
                 from include/rcgp-meta.hpp:13,
                 from include/rcgp.hpp:4,
                 from tests/compile/shader_modules/task_payload.cpp:1:
include/meta/return_handler.hpp: In instantiation of 'void rcgp::return_handler(TaskPayload<T>&, size_t&) [with ShaderStage S = rcgp::ShaderStage::eVertex; T = PayloadData; size_t = long unsigned int]':
include/meta/function_construction.hpp:62:23:   required from 'auto rcgp::trace(auto:101) [with ShaderStage S = rcgp::ShaderStage::eVertex; auto:101 = taskpayload_return_in_vertex()::<lambda(ClipPosition)>]'
   62 |                         return_handler <S> (returns, argi);
      |                         ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:102) [with ShaderStage S = rcgp::ShaderStage::eVertex; auto:102 = taskpayload_return_in_vertex()::<lambda(ClipPosition)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/task_payload.cpp:52:2:   required from here
   52 |         };
      |         ^
include/meta/return_handler.hpp:14:25: error: static assertion failed
   14 |         static_assert(S == ShaderStage::eTask);
      |                       ~~^~~~~~~~~~~~~~~~~~~~~
include/meta/return_handler.hpp:14:25: note: '(rcgp::ShaderStage::eVertex == rcgp::ShaderStage::eTask)' evaluates to false
include/meta/return_handler.hpp: In instantiation of 'void rcgp::return_handler(TaskPayload<T>&, size_t&) [with ShaderStage S = rcgp::ShaderStage::eCompute; T = PayloadData; size_t = long unsigned int]':
include/meta/function_construction.hpp:62:23:   required from 'auto rcgp::trace(auto:101) [with ShaderStage S = rcgp::ShaderStage::eCompute; auto:101 = taskpayload_return_in_compute()::<lambda(WorkGroup<1>)>]'
   62 |                         return_handler <S> (returns, argi);
      |                         ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:102) [with ShaderStage S = rcgp::ShaderStage::eCompute; auto:102 = taskpayload_return_in_compute()::<lambda(WorkGroup<1>)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/task_payload.cpp:60:2:   required from here
   60 |         };
      |         ^
include/meta/return_handler.hpp:14:25: error: static assertion failed
   14 |         static_assert(S == ShaderStage::eTask);
      |                       ~~^~~~~~~~~~~~~~~~~~~~~
include/meta/return_handler.hpp:14:25: note: '(rcgp::ShaderStage::eCompute == rcgp::ShaderStage::eTask)' evaluates to false
In file included from include/meta/function_construction.hpp:9:
include/meta/inject_arguments.hpp: In instantiation of 'void rcgp::inject_one_argument(TaskPayload<T>&, InjectionCounters&) [with ShaderStage S = rcgp::ShaderStage::eVertex; T = PayloadData]':
include/meta/inject_arguments.hpp:178:2:   required from 'rcgp::inject_arguments<rcgp::ShaderStage::eVertex, TaskPayload<PayloadData>, write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, vector<float, 4> > >(std::tuple<TaskPayload<PayloadData>, write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, vector<float, 4> > >&)::<lambda(std::index_sequence<Is ...>)> [with long unsigned int ...Is = {0, 1}; std::index_sequence<Is ...> = std::integer_sequence<long unsigned int, 0, 1>]'
  179 |                 (inject_one_argument <S> (std::get <Is> (args), counters), ...)
      |                  ^~~~~~~~~~~~~~~~~~~~~~~
include/meta/inject_arguments.hpp:178:2:   required from 'void rcgp::inject_arguments(std::tuple<_Elements ...>&) [with ShaderStage S = rcgp::ShaderStage::eVertex; Args = {TaskPayload<PayloadData>, write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, vector<float, 4> >}]'
    7 |         [&] <size_t ... name> (std::index_sequence <name...>) { \
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    8 |                 __VA_ARGS__;                                    \
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    9 |         } (std::make_index_sequence <N> ())
      |         ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
include/meta/function_construction.hpp:53:24:   required from 'auto rcgp::trace(auto:101) [with ShaderStage S = rcgp::ShaderStage::eVertex; auto:101 = taskpayload_param_in_vertex()::<lambda(TaskPayload<PayloadData>, ClipPosition)>]'
   53 |                 inject_arguments <S> (args);
      |                 ~~~~~~~~~~~~~~~~~~~~~^~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:102) [with ShaderStage S = rcgp::ShaderStage::eVertex; auto:102 = taskpayload_param_in_vertex()::<lambda(TaskPayload<PayloadData>, ClipPosition)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/task_payload.cpp:38:2:   required from here
   38 |         };
      |         ^
include/meta/inject_arguments.hpp:75:25: error: static assertion failed: TaskPayload is only valid for mesh shaders
   75 |         static_assert(S == ShaderStage::eMesh, "TaskPayload is only valid for mesh shaders");
      |                       ~~^~~~~~~~~~~~~~~~~~~~~
include/meta/inject_arguments.hpp:75:25: note: '(rcgp::ShaderStage::eVertex == rcgp::ShaderStage::eMesh)' evaluates to false
include/meta/inject_arguments.hpp: In instantiation of 'void rcgp::inject_one_argument(TaskPayload<T>&, InjectionCounters&) [with ShaderStage S = rcgp::ShaderStage::eCompute; T = PayloadData]':
include/meta/inject_arguments.hpp:178:2:   required from 'rcgp::inject_arguments<rcgp::ShaderStage::eCompute, TaskPayload<PayloadData>, WorkGroup<1, 1, 1> >(std::tuple<TaskPayload<PayloadData>, WorkGroup<1, 1, 1> >&)::<lambda(std::index_sequence<Is ...>)> [with long unsigned int ...Is = {0, 1}; std::index_sequence<Is ...> = std::integer_sequence<long unsigned int, 0, 1>]'
  179 |                 (inject_one_argument <S> (std::get <Is> (args), counters), ...)
      |                  ^~~~~~~~~~~~~~~~~~~~~~~
include/meta/inject_arguments.hpp:178:2:   required from 'void rcgp::inject_arguments(std::tuple<_Elements ...>&) [with ShaderStage S = rcgp::ShaderStage::eCompute; Args = {TaskPayload<PayloadData>, WorkGroup<1, 1, 1>}]'
    7 |         [&] <size_t ... name> (std::index_sequence <name...>) { \
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    8 |                 __VA_ARGS__;                                    \
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    9 |         } (std::make_index_sequence <N> ())
      |         ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
include/meta/function_construction.hpp:53:24:   required from 'auto rcgp::trace(auto:101) [with ShaderStage S = rcgp::ShaderStage::eCompute; auto:101 = taskpayload_param_in_compute()::<lambda(TaskPayload<PayloadData>, WorkGroup<1>)>]'
   53 |                 inject_arguments <S> (args);
      |                 ~~~~~~~~~~~~~~~~~~~~~^~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:102) [with ShaderStage S = rcgp::ShaderStage::eCompute; auto:102 = taskpayload_param_in_compute()::<lambda(TaskPayload<PayloadData>, WorkGroup<1>)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/task_payload.cpp:43:87:   required from here
   43 |         auto bad = $shader(compute)(TaskPayload <PayloadData> payload, WorkGroup <1> group) {};
      |                                                                                              ^
include/meta/inject_arguments.hpp:75:25: error: static assertion failed: TaskPayload is only valid for mesh shaders
   75 |         static_assert(S == ShaderStage::eMesh, "TaskPayload is only valid for mesh shaders");
      |                       ~~^~~~~~~~~~~~~~~~~~~~~
include/meta/inject_arguments.hpp:75:25: note: '(rcgp::ShaderStage::eCompute == rcgp::ShaderStage::eMesh)' evaluates to false
#endif
#endif
